// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly ModelCard 1`] = `
<View
  accessibilityLabel="Qwen3 4B Q4 K M"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "opacity": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 12,
          "marginBottom": 8,
          "padding": 12,
        },
        {
          "borderColor": "#e1e1e1",
        },
      ]
    }
  >
    <SvgMock
      color="#000000"
      height={28}
      width={28}
    />
    <View
      style={
        {
          "flex": 1,
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          bold={true}
          numberOfLines={1}
          style={
            {
              "flexShrink": 1,
            }
          }
          variant="h4"
        >
          Qwen3 4B Q4 K M
        </Text>
        <Text
          bold={true}
          style={
            {
              "color": "#7c7c7c",
            }
          }
          variant="body1"
        >
          (4B)
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <PlatformIcon
          androidIconName="chat_bubble"
          color="#7c7c7c"
          iosIconName="text.bubble"
          size={12}
        />
        <Text
          style={
            {
              "color": "#7c7c7c",
            }
          }
          variant="body2"
        >
          Text generation
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 4,
            "marginTop": 4,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 2,
                "paddingHorizontal": 8,
                "paddingVertical": 2,
              },
              {
                "backgroundColor": "#ebebeb",
              },
            ]
          }
        >
          <PlatformIcon
            androidIconName="storage"
            color="#7c7c7c"
            iosIconName="internaldrive"
            size={12}
          />
          <Text
            style={
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "#7c7c7c",
                },
              ]
            }
          >
            2.5 GB
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 2,
                "paddingHorizontal": 8,
                "paddingVertical": 2,
              },
              {
                "backgroundColor": "#ebebeb",
              },
            ]
          }
        >
          <PlatformIcon
            androidIconName="lightbulb"
            color="#7c7c7c"
            iosIconName="lightbulb"
            size={12}
          />
          <Text
            style={
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "#7c7c7c",
                },
              ]
            }
          >
            Thinking
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 2,
                "paddingHorizontal": 8,
                "paddingVertical": 2,
              },
              {
                "backgroundColor": "#ebebeb",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "#7c7c7c",
                },
              ]
            }
          >
            Multilingual
          </Text>
        </View>
      </View>
    </View>
    <PlatformIcon
      androidIconName="download"
      color="#628395"
      iosIconName="arrow.down.circle"
      size={28}
    />
  </View>
</View>
`;

exports[`renders correctly ModelCard when model is downloaded 1`] = `
<View
  accessibilityLabel="Qwen3 4B Q4 K M"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "opacity": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 12,
          "marginBottom": 8,
          "padding": 12,
        },
        {
          "borderColor": "#e1e1e1",
        },
      ]
    }
  >
    <SvgMock
      color="#000000"
      height={28}
      width={28}
    />
    <View
      style={
        {
          "flex": 1,
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          bold={true}
          numberOfLines={1}
          style={
            {
              "flexShrink": 1,
            }
          }
          variant="h4"
        >
          Qwen3 4B Q4 K M
        </Text>
        <Text
          bold={true}
          style={
            {
              "color": "#7c7c7c",
            }
          }
          variant="body1"
        >
          (4B)
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <PlatformIcon
          androidIconName="chat_bubble"
          color="#7c7c7c"
          iosIconName="text.bubble"
          size={12}
        />
        <Text
          style={
            {
              "color": "#7c7c7c",
            }
          }
          variant="body2"
        >
          Text generation
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 4,
            "marginTop": 4,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 2,
                "paddingHorizontal": 8,
                "paddingVertical": 2,
              },
              {
                "backgroundColor": "#ebebeb",
              },
            ]
          }
        >
          <PlatformIcon
            androidIconName="storage"
            color="#7c7c7c"
            iosIconName="internaldrive"
            size={12}
          />
          <Text
            style={
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "#7c7c7c",
                },
              ]
            }
          >
            2.5 GB
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 2,
                "paddingHorizontal": 8,
                "paddingVertical": 2,
              },
              {
                "backgroundColor": "#ebebeb",
              },
            ]
          }
        >
          <PlatformIcon
            androidIconName="lightbulb"
            color="#7c7c7c"
            iosIconName="lightbulb"
            size={12}
          />
          <Text
            style={
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "#7c7c7c",
                },
              ]
            }
          >
            Thinking
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 2,
                "paddingHorizontal": 8,
                "paddingVertical": 2,
              },
              {
                "backgroundColor": "#ebebeb",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "#7c7c7c",
                },
              ]
            }
          >
            Multilingual
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly ModelCard when model is downloading 1`] = `
<View
  accessibilityLabel="Qwen3 4B Q4 K M"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "opacity": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 12,
          "marginBottom": 8,
          "padding": 12,
        },
        {
          "borderColor": "#e1e1e1",
        },
      ]
    }
  >
    <SvgMock
      color="#000000"
      height={28}
      width={28}
    />
    <View
      style={
        {
          "flex": 1,
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          bold={true}
          numberOfLines={1}
          style={
            {
              "flexShrink": 1,
            }
          }
          variant="h4"
        >
          Qwen3 4B Q4 K M
        </Text>
        <Text
          bold={true}
          style={
            {
              "color": "#7c7c7c",
            }
          }
          variant="body1"
        >
          (4B)
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <PlatformIcon
          androidIconName="chat_bubble"
          color="#7c7c7c"
          iosIconName="text.bubble"
          size={12}
        />
        <Text
          style={
            {
              "color": "#7c7c7c",
            }
          }
          variant="body2"
        >
          Text generation
        </Text>
      </View>
      <ProgressBar
        progress={0.4}
      />
    </View>
    <PlatformIcon
      androidIconName="downloading"
      color="#628395"
      iosIconName="arrow.down.circle.dotted"
      size={28}
    />
  </View>
</View>
`;

exports[`renders correctly ModelCard when model is selected 1`] = `
<View
  accessibilityLabel="Qwen3 4B Q4 K M"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "opacity": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 12,
          "marginBottom": 8,
          "padding": 12,
        },
        {
          "borderColor": "#7c7c7c",
        },
      ]
    }
  >
    <SvgMock
      color="#000000"
      height={28}
      width={28}
    />
    <View
      style={
        {
          "flex": 1,
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          bold={true}
          numberOfLines={1}
          style={
            {
              "flexShrink": 1,
            }
          }
          variant="h4"
        >
          Qwen3 4B Q4 K M
        </Text>
        <Text
          bold={true}
          style={
            {
              "color": "#7c7c7c",
            }
          }
          variant="body1"
        >
          (4B)
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <PlatformIcon
          androidIconName="chat_bubble"
          color="#7c7c7c"
          iosIconName="text.bubble"
          size={12}
        />
        <Text
          style={
            {
              "color": "#7c7c7c",
            }
          }
          variant="body2"
        >
          Text generation
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 4,
            "marginTop": 4,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 2,
                "paddingHorizontal": 8,
                "paddingVertical": 2,
              },
              {
                "backgroundColor": "#ebebeb",
              },
            ]
          }
        >
          <PlatformIcon
            androidIconName="storage"
            color="#7c7c7c"
            iosIconName="internaldrive"
            size={12}
          />
          <Text
            style={
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "#7c7c7c",
                },
              ]
            }
          >
            2.5 GB
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 2,
                "paddingHorizontal": 8,
                "paddingVertical": 2,
              },
              {
                "backgroundColor": "#ebebeb",
              },
            ]
          }
        >
          <PlatformIcon
            androidIconName="lightbulb"
            color="#7c7c7c"
            iosIconName="lightbulb"
            size={12}
          />
          <Text
            style={
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "#7c7c7c",
                },
              ]
            }
          >
            Thinking
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 2,
                "paddingHorizontal": 8,
                "paddingVertical": 2,
              },
              {
                "backgroundColor": "#ebebeb",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 12,
                },
                {
                  "color": "#7c7c7c",
                },
              ]
            }
          >
            Multilingual
          </Text>
        </View>
      </View>
    </View>
    <PlatformIcon
      androidIconName="check_circle"
      color="#2ec728"
      iosIconName="checkmark.circle.fill"
      size={24}
    />
  </View>
</View>
`;
